fix(mod): swag ile adding mised handlers
